--- a/angular.json
+++ b/angular.json
@@ -7,12 +7,16 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
         }
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "ae",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
